tests/baselines/reference/duplicateStringNamedProperty1.errors.txt
==== tests/cases/compiler/duplicateStringNamedProperty1.ts (1 errors) ====
    export interface Album {
        "artist": string;
        artist: string;
        ~~~~~~
!!! error TS2300: Duplicate identifier 'artist'.
    }